# vehicle_control

./: CMakeLists.txt  README.md  README.txt  checklist.txt  gps_collect.txt  gps_new_collect.txt  jun_control_doc.txt  last_gps_collect.txt  package.xml  sim_data.bag
cream_sooo/Lane-Detect/: CMakeLists.txt  bev_transform.py  camera.py  camera_real.py  image_processing.py  kalman_filter.py  lane_detection.py  main.py  package.xml  points.py  utils_functions.py  yolopv2.py
cream_sooo/Lane-Detect/data/weights/traced_model/: data.pkl
cream_sooo/Lane-Detect/data/weights/traced_model/code/__torch__/models/: common.py  common.py.debug_pkl  yolo.py  yolo.py.debug_pkl
cream_sooo/Lane-Detect/data/weights/traced_model/code/__torch__/models/common/: ___torch_mangle_100.py  ___torch_mangle_103.py  ___torch_mangle_106.py  ___torch_mangle_107.py  ___torch_mangle_107.py.debug_pkl  ___torch_mangle_11.py  ___torch_mangle_110.py  ___torch_mangle_113.py  ___torch_mangle_116.py  ___torch_mangle_119.py  ___torch_mangle_122.py  ___torch_mangle_125.py  ___torch_mangle_126.py  ___torch_mangle_126.py.debug_pkl  ___torch_mangle_129.py  ___torch_mangle_132.py  ___torch_mangle_135.py  ___torch_mangle_138.py  ___torch_mangle_14.py  ___torch_mangle_141.py  ___torch_mangle_147.py  ___torch_mangle_150.py  ___torch_mangle_153.py  ___torch_mangle_156.py  ___torch_mangle_159.py  ___torch_mangle_160.py  ___torch_mangle_163.py  ___torch_mangle_166.py  ___torch_mangle_169.py  ___torch_mangle_17.py  ___torch_mangle_172.py  ___torch_mangle_175.py  ___torch_mangle_178.py  ___torch_mangle_179.py  ___torch_mangle_182.py  ___torch_mangle_185.py  ___torch_mangle_189.py  ___torch_mangle_190.py  ___torch_mangle_193.py  ___torch_mangle_196.py  (+111 more)
cream_sooo/Lane-Detect/data/weights/traced_model/code/__torch__/torch/nn/modules/: activation.py  activation.py.debug_pkl  batchnorm.py  batchnorm.py.debug_pkl  container.py  conv.py  conv.py.debug_pkl  linear.py  linear.py.debug_pkl  pooling.py  pooling.py.debug_pkl  upsampling.py  upsampling.py.debug_pkl
cream_sooo/Lane-Detect/data/weights/traced_model/code/__torch__/torch/nn/modules/activation/: ___torch_mangle_1.py  ___torch_mangle_10.py  ___torch_mangle_102.py  ___torch_mangle_105.py  ___torch_mangle_109.py  ___torch_mangle_112.py  ___torch_mangle_115.py  ___torch_mangle_118.py  ___torch_mangle_121.py  ___torch_mangle_124.py  ___torch_mangle_128.py  ___torch_mangle_13.py  ___torch_mangle_131.py  ___torch_mangle_134.py  ___torch_mangle_134.py.debug_pkl  ___torch_mangle_137.py  ___torch_mangle_137.py.debug_pkl  ___torch_mangle_140.py  ___torch_mangle_146.py  ___torch_mangle_146.py.debug_pkl  ___torch_mangle_149.py  ___torch_mangle_152.py  ___torch_mangle_152.py.debug_pkl  ___torch_mangle_155.py  ___torch_mangle_158.py  ___torch_mangle_16.py  ___torch_mangle_162.py  ___torch_mangle_165.py  ___torch_mangle_168.py  ___torch_mangle_171.py  ___torch_mangle_174.py  ___torch_mangle_177.py  ___torch_mangle_181.py  ___torch_mangle_184.py  ___torch_mangle_188.py  ___torch_mangle_19.py  ___torch_mangle_192.py  ___torch_mangle_195.py  ___torch_mangle_198.py  ___torch_mangle_201.py  (+103 more)
cream_sooo/Lane-Detect/data/weights/traced_model/code/__torch__/torch/nn/modules/batchnorm/: ___torch_mangle_336.py  ___torch_mangle_336.py.debug_pkl  ___torch_mangle_349.py  ___torch_mangle_349.py.debug_pkl  ___torch_mangle_357.py  ___torch_mangle_357.py.debug_pkl  ___torch_mangle_367.py  ___torch_mangle_382.py  ___torch_mangle_396.py  ___torch_mangle_396.py.debug_pkl  ___torch_mangle_408.py  ___torch_mangle_412.py  ___torch_mangle_412.py.debug_pkl
cream_sooo/Lane-Detect/data/weights/traced_model/code/__torch__/torch/nn/modules/container/: ___torch_mangle_292.py  ___torch_mangle_295.py  ___torch_mangle_298.py  ___torch_mangle_345.py  ___torch_mangle_353.py  ___torch_mangle_376.py  ___torch_mangle_405.py  ___torch_mangle_415.py
cream_sooo/Lane-Detect/data/weights/traced_model/data/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  (+241 more)
cream_sooo/Lane-Detect/sensor/: sensor_params.json
cream_sooo/cream_sooo/: CMakeLists.txt  package.xml
cream_sooo/cream_sooo/launch/: judgment.launch
cream_sooo/cream_sooo/src/: judgment_node.cpp
(+189 files in other folders)
