<?xml version="1.0"?>
<package format="2">
  <name>vehicle_control</name>
  <version>0.0.1</version>
  <description>The capstone project</description>

  <maintainer email="cjh200001@gmail.com"></maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
