<?xml version="1.0"?>
<package format="2">
  <name>cream_sooo</name>
  <version>0.0.0</version>
  <description>The cream_sooo package</description>

  <maintainer email="you@yourdomain.tld">Your Name</maintainer>
  <license>BSD</license>

  <!-- 빌드 도구 의존성 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 빌드 시 의존성 -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>

  <!-- 실행 시 의존성 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>

  <export>
    <!-- 추가적인 정보가 필요하면 여기에 작성 -->
  </export>
</package>
